Update demo app

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
         352.00 USD
       </div>
 
-      <button class="unl-button button-tertiary" onclick="openModal()">
+      <button class="unl-button button-tertiary" onclick="openPayment('cardForm')">
         Link a bank card
       </button>
 
-      <button class="unl-button button-primary pay-button" onclick="openPayment('payForm')">Pay</button>
+      <button class="unl-button button-primary pay-button" onclick="openModal()">Pay</button>
     </div>
   </div>
 
@@ -166,7 +166,7 @@
 
 <div id="demo-shop-modal" class="modal">
   <div class="modal__content">
-    <div class="modal-menu-item" onclick="openPayment('cardForm')">
+    <div class="modal-menu-item" onclick="openPayment('payForm')">
       Bank card
       <svg width="16" height="24" viewBox="0 0 16 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M4.70578 7.70575C4.31599 7.31596 4.31812 6.68186 4.70609 6.2939L4.79393 6.20605C5.18389 5.81609 5.81352 5.81348 6.208 6.20796L11.292 11.292C11.683 11.683 11.6865 12.3135 11.292 12.708L6.208 17.792C5.81698 18.183 5.1819 18.1819 4.79393 17.7939L4.70609 17.706C4.31613 17.3161 4.31278 16.6872 4.70578 16.2942L9.00001 12L4.70578 7.70575Z" fill="#B8C1CC"/>
